--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,13 @@ dist.jar=${dist.dir}/AlvaroWeatherApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-io-2.11.0.jar=C:\\Users\\Alvaro\\Downloads\\commons-io-2.11.0\\commons-io-2.11.0.jar
-file.reference.json-20220924.jar=C:\\Users\\Alvaro\\Downloads\\json-20220924.jar
+file.reference.commons-io-2.11.0.jar=libraries/commons-io-2.11.0.jar
+file.reference.json-20220924.jar=libraries/json-20220924.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-20220924.jar}:\
-    ${file.reference.commons-io-2.11.0.jar}
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.json-20220924.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
